--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@
               <img src="./icons/Logo.svg" alt="icon" />
             </div>
             <div class="nav_links">
-              <i class="fa-solid fa-bars"></i>
+              <input type="checkbox" name="check" id="check" />
+              <label for="check">
+                <i class="fa-solid fa-bars" id="btn"></i>
+                <i class="fa-solid fa-x" id="cancel"></i>
+              </label>
               <ul>
                 <li>
                   <a href="#"
                     >About <img src="./icons/small-down.svg" alt="icon"
                   /></a>
                 </li>
+                <li><a href="#">About</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Login</a></li>
@@ -133,19 +138,22 @@
           </div>
           <div class="start_right">
             <div class="beak"></div>
-            <h3>Sign Up</h3>
-            <a href="#">Start your free trial</a>
-            <input type="imail" placeholder="Your primary email" />
-            <input type="password" placeholder="Password" />
-            <input type="password" placeholder="Re-type Password" />
+            <div class="start_right_hero">
+             
+              <h3>Sign Up</h3>
+              <a href="#">Start your free trial</a>
+              <input type="imail" placeholder="Your primary email" />
+              <input type="password" placeholder="Password" />
+              <input type="password" placeholder="Re-type Password" />
 
-            <h4>OR</h4>
-            <a href="#"
-              ><img
-                src="./icons/btn_google_signin_dark_normal_web@2x.svg"
-                alt="icon"
-            /></a>
-            <div class="start_right_line"></div>
+              <h4>OR</h4>
+              <a href="#"
+                ><img
+                  src="./icons/btn_google_signin_dark_normal_web@2x.svg"
+                  alt="icon"
+              /></a>
+              <div class="start_right_line"></div>
+            </div>
           </div>
         </div>
       </div>
